--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "axios": "^0.21.1",
     "cirrus-ui": "^0.6.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-markdown": "^6.0.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
   },
